# Betriebssystem

./: README
Aufgaben/A0/: sieve  sieve.c
Aufgaben/A1.2_filo/: filo  filo.c
Aufgaben/A1_lilo/: lilo  lilo.c
Aufgaben/A2_wsort/: sort_compare_funcs.c  wsort  wsort.bsteam  wsort.c
Aufgaben/A3_clash/: Makefile  clash.c  collect_zombies.c  read_input.c  strtok.c
Aufgaben/A4_halde/: Makefile  halde.c  test.c
Aufgaben/A5_palim/: palim.c
Klausuren/Hupsi/: Makefile  hupsi  hupsi.c
Klausuren/Parrots/: Makefile  parrots.c
Klausuren/Party/: Makefile  party  party.c
Klausuren/Saver/: Makefile  saver  saver.c
Klausuren/Witch/: list  witch.c
SelfTesting/A2Wsort/: CMakeLists.txt
SelfTesting/A2_Wsort/: Makefile  wsort  wsort.c  wsort_Alex_answer.c
SelfTesting/A3_Clash/: Makefile  clash  clash.c  plist.c
SelfTesting/A5_Palim/: Makefile  palim.bsteam  palim.c
SelfTesting/K_SoSe21_Hupsi/: Makefile  hupsi  hupsi.c
SelfTesting/Self_learning/: read_input.c
SelfTesting/U5_isort/: isort  isort.c
SelfTesting/U6_listRun/: listRun  listRun.c
SelfTesting/U8_symlink/: symlink  symlink.c
SelfTesting/fork/: fork1Bilibili  fork2  forkExample01  primer0  primer1  tempCodeRunnerFile.c
SelfTesting/makefile/: main.c  makefile  tool1.c  tool1.h  tool2.c
SelfTesting/wait/: primer3  primer3.c  wait01.c  waitpid01.c
Uebungen/0_C_basics/: 21s_probe_a1_i.c  sose22_a1_c.c
Uebungen/4_module/: .Makefile.swp  fib.c  main.c
Uebungen/5_I:O&Wsort/: io_gregor.c  isort  isort.c  isort_manuel.c  sort_shipan.c
Uebungen/6_Prozesse&clash/: listRun  listRun.c  listRun_manuel  (+2 more)
(+62 files in other folders)
