cmake_minimum_required(VERSION 3.24)
project(A2Wsort)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(A2Wsort
        5-wsort.pdf
        a2.pdf
        wlist0
        wlist05
        wlist1
        wlist2
        wlist3
        wlist4
        wlist5
        wlist6
        wsort.bsteam
        wsort.c)
